# openfactory-asset-api

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: routing_layer.yml  state_api.yml  stream_api_non_replicated.yml
dev_tools/: build_virtual_assets.sh  deploy_virtual_factory.sh  teardown_virtual_factory.sh
dev_tools/virtual_assets/temp_sensor/: Dockerfile  adapter.py
dev_tools/virtual_factory/: docker-compose.yml  uns.yml
dev_tools/virtual_factory/wc1/: dev_vtempsensor.yml
dev_tools/virtual_factory/wc2/: dev_vtempsensor.yml
docs/: devcontainer.md
routing_layer/: Dockerfile  README.md  docker-compose.yml  manage.py
routing_layer/app/: config.py  dependencies.py  main.py
routing_layer/app/api/: router_asset.py  router_asset_state.py
routing_layer/app/core/: logger.py  proxy.py  utils.py
routing_layer/app/core/controller/: deployment_platform.py  docker_deployment_platform.py  grouping_strategy.py  routing_controller.py  swarm_deployment_platform.py  unslevel_grouping_strategy.py
routing_layer/deployment/: deploy.py  teardown.py
scripts/: README.md
state_api/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements_docker.txt
state_api/app/: asset_state.py
stream_api/: README.md
stream_api/non_replicated/: Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements_docker.txt
stream_api/non_replicated/app/api/: asset_stream.py  readiness.py
stream_api/non_replicated/app/core/: kafka_dispatcher.py
